Configuration of ignores

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /Code/SA_Java_Journals/build/
 /Code/SA_Java_Journals/lib/
 /Code/SA_Java_Journals/nbproject/
+/SQL/JournalsSchema.mwb.bak
+*~
+/Code/SA_Java_Journals_site/nbproject/private/
