--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/Code/SA_Java_Journals/nbproject/private/
+#/Code/SA_Java_Journals/nbproject/private/
 /Code/SA_Java_Journals/dist/
 /Code/SA_Java_Journals/build/
 /Code/SA_Java_Journals/lib/
-/Code/SA_Java_Journals/nbproject/
+#/Code/SA_Java_Journals/nbproject/
 /SQL/JournalsSchema.mwb.bak
 *~
 /Code/SA_Java_Journals_site/nbproject/private/
