--- a/Code/SA_Java_Journals/nbproject/project.properties
+++ b/Code/SA_Java_Journals/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.jersey-common.jar=lib/jersey-common.jar
+file.reference.jersey-media-multipart.jar=lib/jersey-media-multipart.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +44,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jersey-media-multipart.jar}:\
+    ${file.reference.jersey-common.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
