Backend for fileupload

--- a/Code/SA_Java_Journals/nbproject/project.properties
+++ b/Code/SA_Java_Journals/nbproject/project.properties
@@ -31,6 +31,8 @@ endorsed.classpath=\
 excludes=
 file.reference.jersey-common.jar=lib/jersey-common.jar
 file.reference.jersey-media-multipart.jar=lib/jersey-media-multipart.jar
+file.reference.jersey-server.jar=lib/jersey-server.jar
+file.reference.mimepull.jar=lib/mimepull.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +48,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.jersey-media-multipart.jar}:\
-    ${file.reference.jersey-common.jar}
+    ${file.reference.jersey-common.jar}:\
+    ${file.reference.jersey-server.jar}:\
+    ${file.reference.mimepull.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
