--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #/Code/SA_Java_Journals/nbproject/private/
 /Code/SA_Java_Journals/dist/
-/Code/SA_Java_Journals/build/
+/Code/SA_Java_Journals/build/generated-sources/*
 /Code/SA_Java_Journals/nbproject/genfiles.properties
 /SQL/JournalsSchema.mwb.bak
 *~
