--- a/Code/SA_Java_Journals/lib/nblibraries.properties
+++ b/Code/SA_Java_Journals/lib/nblibraries.properties
@@ -25,3 +25,21 @@ libs.javaee-endorsed-api-7.0.classpath=\
 libs.javaee-endorsed-api-7.0.displayName=Java EE 7 Endorsed API Library
 libs.javaee-endorsed-api-7.0.javadoc=\
     ${base}/javaee-endorsed-api-7.0/javaee-doc-api.jar
+libs.PowerMockito.classpath=\
+    ${base}/PowerMockito/bsh-2.0b4.jar:\
+    ${base}/PowerMockito/cglib-nodep-2.2.2.jar:\
+    ${base}/PowerMockito/hamcrest-core-1.3.jar:\
+    ${base}/PowerMockito/javassist-3.20.0-GA.jar:\
+    ${base}/PowerMockito/jcommander-1.48.jar:\
+    ${base}/PowerMockito/mockito-core-1.10.19.jar:\
+    ${base}/PowerMockito/objenesis-2.2.jar:\
+    ${base}/PowerMockito/powermock-api-mockito-common-1.6.5.jar:\
+    ${base}/PowerMockito/powermock-mockito-1.6.5-full.jar:\
+    ${base}/PowerMockito/snakeyaml-1.15.jar:\
+    ${base}/PowerMockito/testng-6.9.10.jar
+libs.testng.classpath=\
+    ${base}/testng/testng-6.8.1-dist.jar
+libs.testng.displayName=TestNG 6.8.1
+libs.testng.javadoc=\
+    ${base}/testng/testng-6.8.1-javadoc.zip
+libs.testng.prop-maven-dependencies=org.testng:testng:6.8.1:jar
